--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/socket.io-redis": "^5.2.0",
     "@sailshq/lodash": "^3.10.3",
-    "async": "2.0.1"
-  },
-  "devDependencies": {
-    "@sailshq/eslint": "^4.19.3",
+    "async": "2.0.1",
     "crypto-js": "^3.1.9-1",
     "level": "^4.0.0",
     "sleep-promise": "^8.0.1"
+  },
+  "devDependencies": {
+    "@sailshq/eslint": "^4.19.3"
   },
   "scripts": {
     "start": "NODE_ENV=production node app.js",
