--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "sails": "^1.0.2",
+    "@sailshq/connect-redis": "^3.2.1",
+    "@sailshq/lodash": "^3.10.3",
+    "@sailshq/socket.io-redis": "^5.2.0",
+    "ajv": "^6.5.4",
+    "async": "2.0.1",
+    "cache-base": "^4.0.0",
+    "crypto-js": "^3.1.9-1",
     "grunt": "1.0.1",
+    "level": "^4.0.0",
+    "sails": "^1.0.2",
     "sails-hook-grunt": "^3.0.2",
     "sails-hook-orm": "^2.0.0-16",
     "sails-hook-sockets": "^1.4.0",
-    "@sailshq/connect-redis": "^3.2.1",
-    "@sailshq/socket.io-redis": "^5.2.0",
-    "@sailshq/lodash": "^3.10.3",
-    "async": "2.0.1",
-    "crypto-js": "^3.1.9-1",
-    "level": "^4.0.0",
     "sleep-promise": "^8.0.1"
   },
   "devDependencies": {
