--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sailshq/socket.io-redis": "^5.2.0",
     "ajv": "^6.5.4",
     "async": "2.0.1",
+    "bitcoinjs-message": "^2.0.0",
     "cache-base": "^4.0.0",
     "crypto-js": "^3.1.9-1",
     "grunt": "1.0.1",
